# clsync

./: .doxygen  .gitignore  .travis.sh  .travis.yml  CONTRIB  DEVELOPING  GNUmakefile  LICENSE  Makefile.am  NOTES  PROTOCOL  README  README.md  SHORTHANDS  TODO  calc.c  calc.h  cgroup.c  cgroup.h  clsync.h  cluster.c  cluster.h  common.h  config.h  configuration.h  configure.ac  control.c  control.h  ctx.h  error.c  error.h  fanotify.c  fanotify.h  fasync.c  fasync.h  filetree_cache.c  filetree_cache.h  fileutils.c  fileutils.h  gencompilerflags.c  (+55 more)
debian/: .gitignore  README.Debian  README.source  changelog  clsync-dev.install  clsync-doc.install  clsync.cron.d.ex  clsync.default.ex  clsync.doc-base.EX  clsync.init  clsync.install  clsync@.service  control  copyright  default  examples  files  gbp.conf  init.d.ex  libclsync-dev.install  libclsync.install  libclsync0.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
debian/clsync/DEBIAN/: control  md5sums
debian/clsync/usr/share/doc/clsync/: copyright
debian/upstream/: metadata
doc/devel/thread-splitting/: benchmark-synchandler.c  benchmark.sh
doc/devel/thread-splitting/highload-locks/: clsync-graph-comma.csv  clsync-graph-comma.odc
doc/freebsd/freebsd10-kernel-bsm-queue-patch/: patch-security__audit__audit_pipe.c
example/: clsync-actionscript.sh  clsync-start.sh  clsync-start1.sh
examples/: Makefile.am  build.sh  clsync-actionscript.sh  clsync-start-cluster.sh  clsync-start-production.sh  clsync-start-rsync.sh  clsync-start-rsyncdirect.sh  clsync-start-rsyncshell.sh  clsync-start-rsyncso.sh  clsync-start-simple.sh  clsync-start-so.sh  clsync-start0.sh  clsync-start1.sh  clsync-synchandler-production.sh  clsync-synchandler-rsyncshell.sh  clsync-synchandler-rsyncso.c  clsync-synchandler-so.c  clsync-systemd.sh  clsync@.service  test.sh
examples/production/etc/clsync/: clsync.conf
examples/production/etc/clsync/hooks/lxc/: exit-backup.sh  exit-brother.sh
examples/production/etc/clsync/rules/: hpc  hpc-backup  lxc
examples/production/etc/clsync/synchandler/hpc/: Makefile  handler-backup.c  handler-pdcp.c
examples/production/etc/clsync/synchandler/lxc/: backup.sh  brother.sh  rsync.exclude  synchandler.sh
freebsd/usr/local/etc/clsync/: clsync.conf
freebsd/usr/local/etc/rc.d/: clsync
freebsd/usr/ports/sysutils/clsync/: Makefile  distinfo  pkg-descr  pkg-plist
freebsd/usr/ports/sysutils/clsync/files/: clsync.in  pkg-message.in
gentoo/app-admin/clsync/: ChangeLog  clsync-0.1.ebuild  clsync-0.2.1.ebuild  clsync-0.3.ebuild  clsync-9999.ebuild  metadata.xml
gentoo/app-admin/clsync/files/: clsync-0.1.initd  clsync.conf  clsync.confd  clsync.initd  clsync.initd-2
gentoo/app-doc/clsync-docs/: clsync-docs-9999.ebuild  metadata.xml
gentoo/dev-libs/libclsync/: ChangeLog  libclsync-9999.ebuild  metadata.xml
gentoo/profiles/: package.use.mask
m4/: .gitignore  DOORSTOP
man/man1/: clsync.1
pkgconfig/: clsync.pc.in  libclsync.pc.in
rpm/: build-rpm-from-git.sh  clsync.init  clsync.spec
